--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dictionary App</title>
+  <title>🌈 Dictionary App</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet" />
+
+  <!-- Favicon (Optional) -->
+  <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3658/3658752.png" />
+
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Quicksand', sans-serif;
+      background: linear-gradient(270deg, #ff6ec4, #7873f5, #4ade80, #fcd34d, #f87171);
+      background-size: 1000% 1000%;
+      animation: rainbowBG 30s ease infinite;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #root {
+      width: 100%;
+      max-width: 1024px;
+      margin: auto;
+    }
+
+    @keyframes rainbowBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+  </style>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <!-- You can add a simple loading message for a nice touch -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+  </div>
 </body>
 </html>
