--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet" />
 
-  <!-- Favicon (Optional) -->
-  <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3658/3658752.png" />
+  <!-- Favicon -->
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3658/3658752.png" type="image/png" />
 
   <style>
     body {
@@ -39,7 +39,6 @@
 </head>
 <body>
   <div id="root">
-    
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </div>
 </body>
